update returned struct
